Bug 1075616 - Do partial uploads of non-D2D SourceSurfaces when we have a sampling rect. r=Bas

--HG--
extra : rebase_source : d08b5d3d515484ebc0f8a3be774d66c3b881a8d4